--- a/TraficPlanner-Stable/simulateur/views/index.pug
+++ b/TraficPlanner-Stable/simulateur/views/index.pug
@@ -12,6 +12,7 @@ html
         button(onclick='RemoveStreet()') Remove Street
         form(action='http://localhost:3001')
           input(type='submit', value='View Stats')
+      #logger
       #stats(width='500', height='500')
         h1 Statistique
         #fps
