--- a/TraficPlanner-Stable/simulateur/views/index.pug
+++ b/TraficPlanner-Stable/simulateur/views/index.pug
@@ -8,6 +8,8 @@ html
         canvas#mon_canvas(width='1000', height='1000')
           div(style='display:none;')
             img#event(src='./image/event.png', width='100', height='100')
+            img#green(src='./image/lightgreen.png', width='100', height='100')
+            img#red(src='./image/lightred.png', width='100', height='100')
       #surfaceActions
         button.btn.btn-primary(type='button' onclick='PopCars()' ) Pop Cars
         br
