debug  display and perf

--- a/TraficPlanner-Stable/simulateur/public/stylesheets/main.css
+++ b/TraficPlanner-Stable/simulateur/public/stylesheets/main.css
@@ -63,3 +63,16 @@ body {
   background : url(./../image/lightgreen.png);
   background-color: black;
 }
+
+
+#carBas {
+}
+
+#carHaut {
+}
+
+#carDroite {
+}
+
+#carGauche {
+}
