--- a/TraficPlanner-Stable/simulateur/views/index.pug
+++ b/TraficPlanner-Stable/simulateur/views/index.pug
@@ -10,6 +10,10 @@ html
             img#event(src='./image/event.png', width='100', height='100')
             img#green(src='./image/lightgreen.png', width='100', height='100')
             img#red(src='./image/lightred.png', width='100', height='100')
+            img#carBas(src='./image/carBas.png', width='100', height='100')
+            img#carHaut(src='./image/carHaut.png', width='100', height='100')
+            img#carDroite(src='./image/carDroite.png', width='100', height='100')
+            img#carGauche(src='./image/carGauche.png', width='100', height='100')
       #surfaceActions
         button.btn.btn-primary(type='button' onclick='PopCars()' ) Pop Cars
         br
