Stat module with simulation

--- a/TraficPlanner-Stable/statistique/views/index.pug
+++ b/TraficPlanner-Stable/statistique/views/index.pug
@@ -47,5 +47,5 @@ html
         table#userdata(border='10')
           thead
             th SimulationID
-            th Statistiques
+            th Temps Moyen de la simulation
           tbody
